--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-glamor": "^1.6.13",
     "gatsby-plugin-typography": "^1.7.18",
+    "gatsby-source-filesystem": "^1.5.34",
+    "gatsby-transformer-remark": "^1.7.40",
     "glamorous": "^4.12.4",
     "typography-theme-kirkham": "^0.16.3"
   }
